--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
     "antd": "^5.22.5",
+    "antd-style": "^3.7.1",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
